--- a/style.css
+++ b/style.css
@@ -1,3 +1,112 @@
 body {
-    background-color: lightblue;
+    background-color: #fff899;
 }
+
+.rectangle {
+    border-radius: 10px;
+    height: 120px;
+    width: 900px;
+    background-color: white;
+    margin: auto;
+    margin-bottom: 10px;
+    box-shadow: inset 0 0 10px #d1cbbc;
+}
+
+.rectangle, h1 {
+font-family: 'Amatic SC', cursive;
+font-size: 95px;
+text-align: center;
+}
+
+.books {
+    margin: auto;
+    border-radius: 5px;
+    height: 500px;
+    width: 900px;
+    background-color: #ffffff;
+    border: 1px lightgrey;
+}
+
+#bookshelf {
+    padding: 18px 20px;
+    overflow:scroll; height:500px;
+}
+
+table{ 
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    font-size: 20px;
+    padding: 0 0 12px 0;
+    text-align: left;
+        border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 1px solid black;
+}
+
+th.pages, th.progress {
+    width: 15%;
+}
+
+th.title, {
+    width: 40%;
+}
+
+th.author {
+    width: 30%;
+}
+
+#title, #author, #pagesRead, #pagesTotal {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 1px solid black;
+}
+
+td {
+    background: transparent;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    height: 40px;
+}
+
+      /* Position the Popup form */
+      .login-popup {
+      position: relative;
+      text-align: center;
+      width: 100%;
+      }
+      /* Hide the Popup form */
+      .form-popup {
+      display: none;
+      position: fixed;
+      left: 45%;
+      top:5%;
+      transform: translate(-45%,5%);
+      border: 2px solid #666;
+      z-index: 9;
+      }
+      /* Styles for the form container */
+      .form-container {
+      max-width: 300px;
+      padding: 20px;
+      background-color: #fff;
+      }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
